test/libsolidity/syntaxTests/nameAndTypeResolution/159_storage_variable_initialization_with_incorrect_type_string.sol
contract c {
    uint a = "abc";
}
// ----
// TypeError: (26-31): Type literal_string "abc" is not implicitly convertible to expected type uint256.
